# rse-hello-numba-demo

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  search.html
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: index.md
notebooks/: demo.ipynb
search/: search_index.json
src/rse_hello_numba_demo/: __init__.py  core.py
tests/: test_core.py
