[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rse-hello-numba-demo"
dynamic = ["version"]
description = "A hello-world project using Pint for unit handling"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["pint>=0.23"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools_scm]
